--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
-    "mongoose": "^6.11.4"
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^6.11.4",
+    "validator": "^13.9.0"
   },
   "keywords": []
 }
